<resources>
    <string name="app_name">DocLocker</string>
    <string name="id_banner_google" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="id_interstitial_google" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="id_app_google" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="id_interstitial_facebook" translatable="false">id test</string>
    <string name="id_banner_face" translatable="false">id test</string>
    <string name="camera" translatable="false">From camera</string>
    <string name="from_gallery" translatable="false">From gallery</string>
    <string name="from_camera" translatable="false">From camera</string>
    <string name="filter_image" translatable="false">Filter image</string>
    <string name="original" translatable="false">Original</string>
    <string name="gray_mode" translatable="false">Grayscale mode</string>
    <string name="color_mode" translatable="false">Color mode</string>
    <string name="my_gallery" translatable="false">Document scanner</string>
    <string name="my_pdf" translatable="false">PDF manager</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_share_app" translatable="false">Share app</string>
    <string name="action_more_app" translatable="false">More apps</string>
    <string name="action_create_pdf" translatable="false">Create PDF</string>
    <string name="action_rate_app" translatable="false">Rate the app</string>
    <string name="title" translatable="false">PDF Actions</string>
    <string name="language" translatable="false">Language</string>
    <string name="choose" translatable="false">Select</string>
    <string-array name="language_name">
        <item>English</item>
        <item>Vietnamese</item>
        <item>Chinese</item>
        <item>Korean</item>
        <item>Japanese</item>
        <item>German</item>
        <item>Español</item>
        <item>French</item>
        <item>Indonesian</item>
        <item>Portuguese</item>
    </string-array>
    <string-array name="language_code">
        <item>eng</item>
        <item>life</item>
        <item>chi_sim</item>
        <item>disease</item>
        <item>jpn</item>
        <item>He gave</item>
        <item>spa</item>
        <item>from</item>
        <item>ind</item>
        <item>by</item>
    </string-array>
    <string-array name="language_link">
        <item>https://raw.githubusercontent.com/tesseract-ocr/tessdata/master/eng.traineddata</item>
        <item>https://raw.githubusercontent.com/tesseract-ocr/tessdata/master/vie.traineddata</item>
        <item>https://raw.githubusercontent.com/tesseract-ocr/tessdata/master/chi_sim.traineddata</item>
        <item>https://raw.githubusercontent.com/tesseract-ocr/tessdata/master/kor.traineddata</item>
        <item>https://raw.githubusercontent.com/tesseract-ocr/tessdata/master/jpn.traineddata</item>
        <item>https://raw.githubusercontent.com/tesseract-ocr/tessdata/master/deu.traineddata</item>
        <item>https://raw.githubusercontent.com/tesseract-ocr/tessdata/master/spa.traineddata</item>
        <item>https://raw.githubusercontent.com/tesseract-ocr/tessdata/master/fra.traineddata</item>
        <item>https://raw.githubusercontent.com/tesseract-ocr/tessdata/master/ind.traineddata</item>
        <item>https://raw.githubusercontent.com/tesseract-ocr/tessdata/master/por.traineddata</item>
    </string-array>
    <string name="menu_undo" translatable="false">Undo</string>
    <string name="menu_redo" translatable="false">Redo</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="dialog_title" translatable="false">Insertar link</string>
    <string name="dialog_edit_hint" translatable="false">http(s)://</string>
    <string name="dialog_button_ok" translatable="false">OK</string>
    <string name="dialog_button_cancel" translatable="false">Cancel</string>
    <string name="toast_bold" translatable="false">Bold font</string>
    <string name="toast_italic" translatable="false">Italic</string>
    <string name="toast_underline" translatable="false">Underlined</string>
    <string name="toast_strikethrough" translatable="false">Striped</string>
    <string name="toast_bullet" translatable="false">Bullet</string>
    <string name="toast_quote" translatable="false">Quoted</string>
    <string name="toast_insert_link" translatable="false">Insertar link</string>
    <string name="toast_format_clear" translatable="false">Clear format</string>
    <string name="title_activity_open_note_scanner" translatable="false">Cargo Scans</string>
    <string name="title_activity_gallery" translatable="false">Gallery</string>
    <string name="title_activity_full_image" translatable="false">Scanned image viewer</string>
    <string name="images_scanned" translatable="false">Scanned images</string>
    <string name="action_share" translatable="false">Share</string>
    <string name="action_edit" translatable="false">Edit</string>
    <string name="action_delete" translatable="false">Delete</string>
    <string name="confirm_title" translatable="false">Confirm</string>
    <string name="confirm_delete_text" translatable="false">Are you sure you want to delete this image?</string>
    <string name="answer_yes" translatable="false">Yes</string>
    <string name="answer_no" translatable="false">No</string>
    <string name="confirm_delete_multiple_text" translatable="false">Are you sure you want to delete the selected images?</string>
    <string name="share_snackbar" translatable="false">Share images by:</string>
    <string name="action_about" translatable="false">About</string>
    <string name="about_filename" translatable="false">about.md</string>
    <string name="install_opencv" translatable="false">Instalar OpenCV Manager</string>
    <string name="confirm_install_opencv" translatable="false">Do you want to download OpenCV Manager from GitHub?</string>
    <string name="answer_cancel" translatable="false">Cancel</string>
    <string name="downloading" translatable="false">Downloading</string>
    <string name="downloading_opencv" translatable="false">Descargando OpenCV Manager</string>
    <string name="scanningToast" translatable="false">Searching for a document \ nClick to scan the complete image</string>
    <string name="colorMode" translatable="false">Color mode</string>
    <string name="bwMode" translatable="false">B</string>
    <string name="autoMode" translatable="false">Automatic mode</string>
    <string name="manualMode" translatable="false">Manual mode</string>
    <string name="share_app" translatable="false">Share this App</string>
    <string name="share_app_using" translatable="false">Share the link by means of</string>
    <string name="share_app_body" translatable="false">"Take a look at this app that scans documents from the camera for Operators:"</string>
    <string name="share_app_subject" translatable="false">Great app to scan travel documents for Operators</string>
    <string name="settings" translatable="false">Adjustments</string>
    <string name="basic_settings" translatable="false">Basic settings</string>
    <string name="automatic_tagging" translatable="false">Automatic labeling</string>
    <string name="automatic_tagging_summary" translatable="false">Define the automatic labels to be applied in scans marked using the special template</string>
    <string name="match_aspect" translatable="false">Adjust to the preview aspect ratio</string>
    <string name="match_aspect_summary" translatable="false">Most devices have different aspect ratio with respect to the preview, this setting will select the highest image resolution that matches the aspect ratio of the pre-display</string>
    <string name="bug_rotate" translatable="false">Rotate the image 180º</string>
    <string name="bug_rotate_summary" translatable="false">This setting configures everything in the best way</string>
    <string name="usage_stats" translatable="false">Usage statistics</string>
    <string name="usage_stats_summary" translatable="false">Send several usage statistics to the developer. Content data will not be sent</string>
    <string name="send_message" translatable="false">Send Message</string>
    <string name="send_message_summary" translatable="false">Send message to the developer</string>
    <string name="stats_optin_title" translatable="false">Usage statistics</string>
    <string name="stats_optin_text" translatable="false">Do you want to allow this App to send anonymous usage statistics to the developer? \ N \ nYou can change this at any time in the settings screen.</string>
    <string name="answer_later" translatable="false">After</string>
    <string name="ask_install_opencv" translatable="false">To work, this app requires that OpenCV Manager services, which have not yet been installed.</string>
    <string name="googleplay" translatable="false">Google Play</string>
    <string name="githubdownload" translatable="false">Direct download</string>
    <string name="activateunknown" translatable="false">Go to Settings</string>
    <string name="messageactivateunknown" translatable="false">Google Play is not available and installation from unknown sources is not enabled, please go to the settings and activate it.</string>
    <string name="github_project" translatable="false">Project in GitHub</string>
    <string name="github_project_summary" translatable="false">You can help improve this application with your feedback</string>
    <string name="donate" translatable="false">A cup of coffee</string>
    <string name="donate_summary" translatable="false">If you find this app useful, please write us</string>
    <string name="telegram" translatable="false">Group in telegram</string>
    <string name="telegram_summary" translatable="false">I chatted about the project in Telegram</string>
    <string name="feedback_and_contributions" translatable="false">Feedback and contributions</string>
    <string name="bitcoin_summary" translatable="false">regards</string>
    <string name="dogecoin_summary" translatable="false">Wow, esta app, muy útil</string>
    <string name="paypal_summary" translatable="false">Many payment methods accepted</string>
    <string name="filterModeOn" translatable="false">Image processor started</string>
    <string name="filterModeOff" translatable="false">Image processor off</string>
    <string name="action_tag" translatable="false">Etqueta</string>
    <string name="storage_folder" translatable="false">Storage folder</string>
    <string name="storage_folder_summary" translatable="false">Sets where the scanned files should be stored</string>
    <string name="google_analytics_id" translatable="false">UA-89718316-1</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/630097811</string>
    <string name="interstitials_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/103317371</string>
    <string name="dialog_pdf_enter_file_name" translatable="false">Enter file name</string>
    <string name="page_size" translatable="false">Page size</string>
    <string name="image_scale" translatable="false">Scale of image</string>
    <string name="file_not_found" translatable="false">File not Found!</string>
    <string name="share" translatable="false">Share using ...</string>
    <string name="no_image_selected" translatable="false">No images selected</string>
    <string name="creating_pdf" translatable="false">Creation of PDF</string>
    <string name="ok" translatable="false">Create</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="password" translatable="false">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="nme" translatable="false"> Enter your Name</string>
</resources>