<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_ads"
        android:layout_marginBottom="5dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/imageView5"
            android:foregroundGravity="center"
            android:src="@drawable/doclocker" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="124dp"
            android:layout_height="132dp"
            android:layout_above="@+id/llMid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/hsdrw" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:scaleX="1.1"
            android:scaleY="1"
            android:layout_marginTop="-5dp"
            android:src="@drawable/wave"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/transparent"
            android:layout_marginRight="-20dp"
            android:onClick="logout1"
            android:src="@drawable/logout" />

        <LinearLayout
            android:id="@+id/llMid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="7dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvCamera"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="7dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#9595DE" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:src="@drawable/ic_main_camera" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:text="@string/camera"
                            android:textColor="@color/white"
                            android:textSize="@dimen/main_text_size" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvFromGallery"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="7dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#9595DE" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:src="@drawable/ic_main_gallery" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:text="Guide"
                            android:textColor="@color/white"
                            android:textSize="@dimen/main_text_size" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvGallery"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="7dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#9595DE" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:src="@drawable/ic_main_from_gallery" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:text="@string/my_gallery"
                            android:textColor="@color/white"
                            android:textSize="@dimen/main_text_size" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvPDF"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="7dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#9595DE" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:src="@drawable/ic_main_pdf" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:text="@string/my_pdf"
                            android:textColor="@color/white"
                            android:textSize="@dimen/main_text_size" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>